--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="/logo.png">
-    <meta property="og:title" content="NanDev" />
+    <meta property="og:title" content="AraDev" />
     <meta name="description" content="Kutipan hari ini" />
-    <meta property="og:description" content="Kutipam Hari ini" />
-    <meta property="og:site_name" content="NanDev" />
+    <meta property="og:description" content="Kutipan Hari ini" />
+    <meta property="og:site_name" content="AraDev" />
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <!-- Google Fonts -->
